objects/vlocity_ins__OmniScript__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__AdditionalInformation__c</fullName>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CustomJavaScript__c</fullName>
        <label>Custom JavaScript</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DataRaptorBundleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DataRaptor Bundle</label>
        <referenceTo>vlocity_ins__DRBundle__c</referenceTo>
        <relationshipLabel>Vlocity OmniScripts</relationshipLabel>
        <relationshipName>VlocityOmniScripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DataRaptorBundleName__c</fullName>
        <formula>vlocity_ins__DataRaptorBundleId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DataRaptor Bundle Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisableMetadataCache__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Metadata Cache</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ElementTypeToHTMLTemplateList__c</fullName>
        <label>ElementTypeToHTMLTemplateList</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please do not manually modify this field.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsLwcEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Lightning Web Component Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsProcedure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsProcedure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsReusable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reusable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsTest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__JSON_Output__c</fullName>
        <label>JSON Output</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chinese (Simplified)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Traditional)</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Brazil)</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Spanish (Mexico)</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
                <value>
                    <fullName>Multi-Language</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__LastPreviewPage__c</fullName>
        <label>Last Preview page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LwcId__c</fullName>
        <label>LWC Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OmniProcessType__c</fullName>
        <description>The type of Omni Process: OmniScript, Integration Procedure or Test Procedure.</description>
        <label>Omni Process Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OmniScript</fullName>
                </value>
                <value>
                    <fullName>Integration Procedure</fullName>
                </value>
                <value>
                    <fullName>Test Procedure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProcedureKey__c</fullName>
        <externalId>true</externalId>
        <label>Procedure Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProcedureResponseCacheType__c</fullName>
        <label>Procedure Response Cache Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Org Cache</fullName>
                </value>
                <value>
                    <fullName>Session Cache</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__PropertySet__c</fullName>
        <label>Property Set</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RequiredPermission__c</fullName>
        <label>Required Permission</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SubType__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>vlocity_ins__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Marriage License</fullName>
                </value>
                <value>
                    <fullName>Birth Certificate</fullName>
                </value>
                <value>
                    <fullName>Building Permit</fullName>
                </value>
                <value>
                    <fullName>Gun Permit</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Renew</fullName>
                </value>
                <value>
                    <fullName>Terminate</fullName>
                </value>
                <value>
                    <fullName>Amend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__TestHTMLTemplates__c</fullName>
        <label>Test custom HTML templates</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Licensing &amp; Permitting</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>ins</fullName>
                </value>
                <value>
                    <fullName>watercraft</fullName>
                    <label>Watercraft</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Vlocity OmniScript</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity OmniScripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>